# Home-Location-Endpoint

./: .gitattributes  .gitignore  CHANGELOG.md  NOTICE.md  README.md  SECURITY.md  install.sh  pyproject.toml
.github/workflows/: test.yml
configs/: 99-home-location-endpoint.conf  advanced-location-catalog.json  home-location-endpoint.logrotate  reality-sni.txt  xray-location-routing.example.json
docs/: ADVANCED.md  ARCHITECTURE.md  MODIFIER-ONLY.md  OPERATIONS.md  REALM.md  SECURITY-AND-PRIVACY.md
scripts/: validate_website.py
src/home_location_endpoint/: __init__.py  cli.py  gsloc_rewrite.py  interceptor.py  location_picker.py  preset_manager.py  profile.py  reality_probe.py  render.py  telegram_bot.py  wifitile_rewrite.py
systemd/: home-location-endpoint.service  home-location-telegram-bot.service  xray.service
tests/: __init__.py  e2e_advanced_bot.sh  e2e_installed_endpoint.sh  e2e_profile_handoff.sh  e2e_remote_client.ps1  e2e_ss2022_endpoint.sh  fake_telegram_api.py  integration_xray.sh  test_cli.py  test_install_assets.py  test_installer_modes.sh  test_interceptor.py  test_location_picker.py  test_preset_manager.py  test_reality_probe.py  test_render.py  test_rewrite.py  test_telegram_bot.py
website/: README.md  advanced.html  beginner.html  index.html  prerequisites.html  telegram.html
website/assets/: site.js  style.css
