[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "home-location-endpoint"
version = "0.1.5"
description = "A scoped Apple network-location endpoint behind VLESS + REALITY"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Loading886"}]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
